firmware-nonfree (0.15) UNRELEASED; urgency=low

  * Add 3Com Typhoon (3CR990) firmware.
  * Add ATI Rage 128 and Radeon firmware.
  * Add BayCom DAB-USB firmware.
  * Add Intel PRO/100 firmware.
  * Add Kawasaki LSI KL5KUSB101 firmware.
  * Add Matrox G20/G400/G550 firmware.
  * Add QLogic QLA1xxx firmware.
  * Add Tehuti network card firmware.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 22 Feb 2009 21:54:10 +0000

firmware-nonfree (0.14) unstable; urgency=low

  * Generate license acceptation prompt, based on sun-java5. (closes: #504668)
  * Add Intel Pro 2100 firwmare, version 1.3. (closes: #504671)
  * Add Intel Pro 2200/2915 firwmare, version 3.0. (closes: #449235)

 -- Bastian Blank <waldi@debian.org>  Tue, 02 Dec 2008 18:07:12 +0100

firmware-nonfree (0.13) unstable; urgency=low

  * Make firmware-bnx2 trigger update-initramfs (closes: #494936)
  * Update to 2.6.26-1 (closes: #500692)
  * Update Intel Wireless 3945 firmware, version 15.28.1.6.
    (closes: #494703)

 -- dann frazier <dannf@debian.org>  Thu, 02 Oct 2008 11:58:37 -0600

firmware-nonfree (0.12) unstable; urgency=low

  * Remove Intel Wireless 3945 (old style) firmware.
  * Update Intel Wireless 4965 firmware, version 228.57.1.21.
    (closes: #489684)
  * Add Intel Wireless 4965 firmware, version 228.57.2.21.

 -- Bastian Blank <waldi@debian.org>  Mon, 07 Jul 2008 11:19:42 +0200

firmware-nonfree (0.11) unstable; urgency=low

  [ Bastian Blank ]
  * Update QLogic QLA24XX firmware, version 4.04.00.
  * Add QLogic QLA25XX firmware, version 4.04.00.
  * Add Broadcom NetXtremeII firmwares.

  [ dann frazier ]
  * Correct path to initramfs.conf file in postinst. (closes: #432042)

 -- Bastian Blank <waldi@debian.org>  Sun, 18 May 2008 14:26:49 +0200

firmware-nonfree (0.10) unstable; urgency=low

  [ Daniel Baumann ]
  * Adding Vcs fields in control.

  [ Bastian Blank ]
  * Update iwl4965 firmware, version 4.44.1.20. (closes: #463052)
  * Updating to 2.6.24-1.
  * Drop udeb support.