@@ -1,28 +1,0 @@
-#!/bin/sh
-
-PREREQ="udev"
-
-prereqs()
-{
-	echo "$PREREQ"
-}
-
-case $1 in
-prereqs)
-	prereqs
-	exit 0
-	;;
-esac
-
-. /usr/share/initramfs-tools/hook-functions
-
-copy_exec /lib/udev/firmware.agent /lib/udev/
-
-for FILE in @files_real@
-do
-	mkdir -p $DESTDIR/"$(dirname "$FILE")"
-	if [ ! -e $DESTDIR/"$FILE" ]
-	then
-		cp "$FILE" $DESTDIR/"$FILE"
-	fi
-done
